--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
     <script>
         // === CONFIGURATION (UPDATED) ===
         const REPO = "lannkelz/kao";
-        const TOKEN = "ghp_xxxxxxxxxxxxx";
+        const TOKEN = "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";
         const FILE = "Key.json";
         const BRANCH = "main";
         const API = `https://api.github.com/repos/${REPO}/contents/${FILE}`;
